--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,7 @@ pytest-pretty = "^1.1.0"
 black = "^23.1.0"
 mypy = "^1.1.1"
 flake8 = "^6.0.0"
+pylance = "^0.3.16"
 
 [tool.mypy]
 disallow_any_expr = "true"
